feat(auth): 리프레시 토큰 시스템 구현
주요 기능:
- 액세스 토큰 (1시간) + 리프레시 토큰 (30일) 이중 토큰 시스템
- 리프레시 토큰: httpOnly 쿠키 저장, DB 추적
- 액세스 토큰 만료 시 자동 갱신 (401 에러 처리)
- 로그아웃 시 DB에서 리프레시 토큰 삭제
- OAuth2 소셜 로그인 리프레시 토큰 지원

Backend 변경사항:
- RefreshToken 엔티티 및 Repository, Service 추가
- JwtTokenProvider에 액세스/리프레시 토큰 생성 메서드 추가
- AuthController에 /refresh, /logout 엔드포인트 추가
- AuthService에 리프레시 토큰 생성/갱신/폐기 로직 추가
- OAuth2AuthenticationSuccessHandler에 리프레시 토큰 생성 추가
- SecurityConfig CORS 설정 개선 (SameSite=Lax, Set-Cookie 노출)

Frontend 변경사항:
- api-client.ts에 401 에러 자동 토큰 갱신 로직 추가
- 동시성 처리로 중복 리프레시 방지
- header.tsx 로그아웃 시 백엔드 API 호출

보안 기능:
- httpOnly 쿠키로 XSS 방어
- SameSite=Lax로 CSRF 방어
- DB 저장으로 서버 측 토큰 추적 및 무효화

문서:
- REFRESH_TOKEN_TROUBLESHOOTING.md 추가
  - SameSite=Strict → Lax 변경 이유
  - CORS 설정 문제 해결
  - 쿠키 삭제 속성 일치 필요성
  - OAuth2 리프레시 토큰 구현
  - 자동 갱신 로직 설명

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>